✨Add repetition counting on video 🛠️Fix Repcount csv

--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +75,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>benchpressing</td>\n",
-       "      <td>train143.mp4</td>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>frontraise</td>\n",
+       "      <td>train951.mp4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -86,6 +94,94 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>frontraise</td>\n",
+       "      <td>train952.mp4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pullups</td>\n",
+       "      <td>test1463.mp4</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>squant</td>\n",
+       "      <td>test2340.mp4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>front_raise</td>\n",
+       "      <td>stu5_11.mp4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>426.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -100,20 +196,28 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 305 columns</p>\n",
+       "<p>5 rows × 305 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            type          name  count  L1  L2  L3  L4  L5  L6  L7  ...  L293  \\\n",
-       "9  benchpressing  train143.mp4      0 NaN NaN NaN NaN NaN NaN NaN  ...   NaN   \n",
+       "          type          name  count     L1     L2     L3     L4     L5     L6  \\\n",
+       "0   frontraise  train951.mp4    4.0    6.0   72.0   72.0  132.0  132.0  204.0   \n",
+       "1   frontraise  train952.mp4   10.0   13.0   62.0   62.0  103.0  103.0  126.0   \n",
+       "2      pullups  test1463.mp4    7.0   21.0   60.0   60.0   98.0   98.0  132.0   \n",
+       "3       squant  test2340.mp4    4.0    0.0   86.0   86.0  155.0  155.0  218.0   \n",
+       "4  front_raise   stu5_11.mp4    6.0  104.0  179.0  179.0  255.0  255.0  330.0   \n",
        "\n",
-       "   L294  L295  L296  L297  L298  L299  L300  L301  L302  \n",
-       "9   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "      L7  ...  L293  L294  L295  L296  L297  L298  L299  L300  L301  L302  \n",
+       "0  204.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "1  126.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2  132.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3  219.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4  426.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[1 rows x 305 columns]"
+       "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,8 +237,33 @@
     "\n",
     "\n",
     "train_df.dropna(subset=['count'], inplace=True)\n",
-    "train_df.head()\n",
-    "test_df[test_df['name'] == 'train143.mp4']"
+    "train_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "[0.0, 25.0, 27.0, 57.0, 58.0, 85.0, 87.0, 117.0, 118.0, 148.0, 149.0, 179.0, 180.0, 208.0, 208.0, 239.0, 239.0, 267.0, 268.0, 297.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_reps(df, name):\n",
+    "    reps = df[df['name'] == name].values[0][3:]\n",
+    "    reps = [r for r in reps if pd.notnull(r)]\n",
+    "    count = df[df['name'] == name].values[0][2]\n",
+    "    return reps\n",
+    "\n",
+    "reps = get_reps(test_df, 'train1615.mp4')\n",
+    "print(len(reps))\n",
+    "print(reps)"
    ]
   },
   {
@@ -146,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +349,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +489,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,29 +503,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reps to one column\n",
     "\n",
-    "train_df['reps'] = train_df[train_df.columns[3:]].values.tolist()\n",
+    "train_df['reps'] = train_df.apply(lambda x: ' '.join([str(int(y)) for y in x.values[3:] if pd.notna(y)]), axis=1)\n",
+    "val_df['reps'] = val_df.apply(lambda x: ' '.join([str(int(y)) for y in x.values[3:] if pd.notna(y)]), axis=1)\n",
+    "test_df['reps'] = test_df.apply(lambda x: ' '.join([str(int(y)) for y in x.values[3:] if pd.notna(y)]), axis=1)\n",
+    "\n",
     "train_df.drop(train_df.columns[3:-1], axis=1, inplace=True)\n",
-    "val_df['reps'] = val_df[val_df.columns[3:]].values.tolist()\n",
     "val_df.drop(val_df.columns[3:-1], axis=1, inplace=True)\n",
-    "test_df['reps'] = test_df[test_df.columns[3:]].values.tolist()\n",
     "test_df.drop(test_df.columns[3:-1], axis=1, inplace=True)\n",
     "\n",
-    "# train_df.apply(lambda x: print(int(x['count'])), axis=1)\n",
+    "# train_df.apply(lambda x: print(int(x['count']), x['reps']), axis=1)\n",
     "\n",
-    "train_df['reps'] = train_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)\n",
-    "val_df['reps'] = val_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)\n",
-    "test_df['reps'] = test_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)"
+    "# train_df['reps'] = train_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0]), axis=1)\n",
+    "# val_df['reps'] = val_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0]), axis=1)\n",
+    "# test_df['reps'] = test_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0 ]), axis=1)\n",
+    "\n",
+    "train_df.at[train_df.index[1], 'reps']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +733,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +813,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>1 23 23 40 40 58 59 75 75 92 92 109 109 126</td>\n",
+       "      <td>1 23 23 40 40 58 59 75 75 92 92 109 109 126 12...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -681,7 +824,7 @@
        "      <td>0.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0 42 42 88 88 142</td>\n",
+       "      <td>0 42 42 88 88 142 142 199 199 253 253 317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -692,7 +835,7 @@
        "      <td>138.0</td>\n",
        "      <td>156.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>41 109 109 190 190 258</td>\n",
+       "      <td>41 109 109 190 190 258 258 336 336 396 396 461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -703,7 +846,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>13 33 33</td>\n",
+       "      <td>13 33 33 51 51 74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -714,7 +857,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>0 25 27 57 58 85 87 117 118 148</td>\n",
+       "      <td>0 25 27 57 58 85 87 117 118 148 149 179 180 20...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -736,7 +879,7 @@
        "      <td>40.0</td>\n",
        "      <td>53.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>2 53 53 106 106 160 160</td>\n",
+       "      <td>2 53 53 106 106 160 160 219 219 274 274 335 33...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
@@ -769,7 +912,7 @@
        "      <td>90.0</td>\n",
        "      <td>123.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>121 438 440 535</td>\n",
+       "      <td>121 438 440 535 537 616 617 680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
@@ -780,7 +923,7 @@
        "      <td>104.0</td>\n",
        "      <td>140.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>52 109 109 165 165 245 245 315 840</td>\n",
+       "      <td>52 109 109 165 165 245 245 315 840 880 880 935...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -802,22 +945,22 @@
        "136         pull_up  test    stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
        "\n",
        "                                                  reps  \n",
-       "0          1 23 23 40 40 58 59 75 75 92 92 109 109 126  \n",
-       "1                                    0 42 42 88 88 142  \n",
-       "2                               41 109 109 190 190 258  \n",
-       "3                                             13 33 33  \n",
-       "4                      0 25 27 57 58 85 87 117 118 148  \n",
+       "0    1 23 23 40 40 58 59 75 75 92 92 109 109 126 12...  \n",
+       "1            0 42 42 88 88 142 142 199 199 253 253 317  \n",
+       "2       41 109 109 190 190 258 258 336 336 396 396 461  \n",
+       "3                                    13 33 33 51 51 74  \n",
+       "4    0 25 27 57 58 85 87 117 118 148 149 179 180 20...  \n",
        "..                                                 ...  \n",
-       "132                            2 53 53 106 106 160 160  \n",
+       "132  2 53 53 106 106 160 160 219 219 274 274 335 33...  \n",
        "133  37 82 82 132 132 196 196 244 244 295 295 340 3...  \n",
        "134  84 104 105 132 132 156 156 187 188 214 215 241...  \n",
-       "135                                    121 438 440 535  \n",
-       "136                 52 109 109 165 165 245 245 315 840  \n",
+       "135                    121 438 440 535 537 616 617 680  \n",
+       "136  52 109 109 165 165 245 245 315 840 880 880 935...  \n",
        "\n",
        "[116 rows x 8 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
