--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +241,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CLEAN\n",
+    "\n",
+    "I am dying cleaning this dataset.\n",
+    "Hope there is no mislabeled data in the world and everyone gets beautifully formatted data.😭😭😭😖😖😖"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Labeld frame is longer than actual frame length. I don't know why. \n",
+    "# It does has 1841 frames. But only 1681 frames in rawframe dir.\n",
+    "# I know why. The video is broken.\n",
+    "train_df[train_df['name'] == 'stu1_10.mp4']\n",
+    "train_df = train_df[train_df['name'] != 'stu1_10.mp4']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[train_df['name'] == 'stu6_5.mp4'].values[0][3:28]\n",
+    "train_df = train_df[train_df['name'] != 'stu6_5.mp4']\n",
+    "train_df.drop(train_df[train_df['name'] == 'stu4_3'].index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df[test_df['name'] == 'stu4_5.mp4'].values[0]\n",
+    "# why are there so many same frames in the repetition?\n",
+    "# And the video is situp, not bench press.\n",
+    "# Drop this.\n",
+    "test_df = test_df[test_df['name'] != 'stu4_5.mp4']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +396,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +536,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +559,7 @@
        "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,14 +609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "508 91 109\n"
+      "506 91 108\n"
      ]
     }
    ],
@@ -588,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -660,13 +707,6 @@
        "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bench_pressing</td>\n",
-       "      <td>93</td>\n",
-       "      <td>13</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>front_raise</td>\n",
        "      <td>93</td>\n",
@@ -679,6 +719,13 @@
        "      <td>93</td>\n",
        "      <td>18</td>\n",
        "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bench_pressing</td>\n",
+       "      <td>91</td>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -723,9 +770,9 @@
        "             type  count_train  count_val  count_test\n",
        "9           squat          101         16          18\n",
        "6         pull_up           94         14          19\n",
-       "1  bench_pressing           93         13          19\n",
        "2     front_raise           93         19          18\n",
        "8           situp           93         18          20\n",
+       "1  bench_pressing           91         13          18\n",
        "7         push_up           88         18          16\n",
        "3       jump_jack           76         15          26\n",
        "5     pommelhorse           69         15          15\n",
@@ -733,7 +780,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +918,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
+       "      <th>131</th>\n",
        "      <td>situp</td>\n",
        "      <td>test</td>\n",
        "      <td>stu8_57.mp4</td>\n",
@@ -882,7 +929,7 @@
        "      <td>2 53 53 106 106 160 160 219 219 274 274 335 33...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133</th>\n",
+       "      <th>132</th>\n",
        "      <td>push_up</td>\n",
        "      <td>test</td>\n",
        "      <td>stu8_46.mp4</td>\n",
@@ -893,7 +940,7 @@
        "      <td>37 82 82 132 132 196 196 244 244 295 295 340 3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>134</th>\n",
+       "      <th>133</th>\n",
        "      <td>push_up</td>\n",
        "      <td>test</td>\n",
        "      <td>stu4_47.mp4</td>\n",
@@ -904,7 +951,7 @@
        "      <td>84 104 105 132 132 156 156 187 188 214 215 241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>135</th>\n",
+       "      <th>134</th>\n",
        "      <td>bench_pressing</td>\n",
        "      <td>test</td>\n",
        "      <td>stu2_6.mp4</td>\n",
@@ -915,7 +962,7 @@
        "      <td>121 438 440 535 537 616 617 680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
+       "      <th>135</th>\n",
        "      <td>pull_up</td>\n",
        "      <td>test</td>\n",
        "      <td>stu1_36.mp4</td>\n",
@@ -927,7 +974,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>116 rows × 8 columns</p>\n",
+       "<p>115 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -938,11 +985,11 @@
        "3    bench_pressing  test   train151.mp4          NaN    NaN    NaN    3.0   \n",
        "4         jump_jack  test  train1615.mp4          NaN    NaN    NaN   10.0   \n",
        "..              ...   ...            ...          ...    ...    ...    ...   \n",
-       "132           situp  test    stu8_57.mp4  zoL7eingzkQ   40.0   53.0    7.0   \n",
-       "133         push_up  test    stu8_46.mp4  wS6Kp3k-zV8   70.0  112.0   19.0   \n",
-       "134         push_up  test    stu4_47.mp4  t0QZmiXBC-Q   62.0  120.0   37.0   \n",
-       "135  bench_pressing  test     stu2_6.mp4  QxLPG9FwAUU   90.0  123.0    4.0   \n",
-       "136         pull_up  test    stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
+       "131           situp  test    stu8_57.mp4  zoL7eingzkQ   40.0   53.0    7.0   \n",
+       "132         push_up  test    stu8_46.mp4  wS6Kp3k-zV8   70.0  112.0   19.0   \n",
+       "133         push_up  test    stu4_47.mp4  t0QZmiXBC-Q   62.0  120.0   37.0   \n",
+       "134  bench_pressing  test     stu2_6.mp4  QxLPG9FwAUU   90.0  123.0    4.0   \n",
+       "135         pull_up  test    stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
        "\n",
        "                                                  reps  \n",
        "0    1 23 23 40 40 58 59 75 75 92 92 109 109 126 12...  \n",
@@ -951,16 +998,16 @@
        "3                                    13 33 33 51 51 74  \n",
        "4    0 25 27 57 58 85 87 117 118 148 149 179 180 20...  \n",
        "..                                                 ...  \n",
-       "132  2 53 53 106 106 160 160 219 219 274 274 335 33...  \n",
-       "133  37 82 82 132 132 196 196 244 244 295 295 340 3...  \n",
-       "134  84 104 105 132 132 156 156 187 188 214 215 241...  \n",
-       "135                    121 438 440 535 537 616 617 680  \n",
-       "136  52 109 109 165 165 245 245 315 840 880 880 935...  \n",
+       "131  2 53 53 106 106 160 160 219 219 274 274 335 33...  \n",
+       "132  37 82 82 132 132 196 196 244 244 295 295 340 3...  \n",
+       "133  84 104 105 132 132 156 156 187 188 214 215 241...  \n",
+       "134                    121 438 440 535 537 616 617 680  \n",
+       "135  52 109 109 165 165 245 245 315 840 880 880 935...  \n",
        "\n",
-       "[116 rows x 8 columns]"
+       "[115 rows x 8 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
