--- a/WorkoutDetector/binary_video_classification.ipynb
+++ b/WorkoutDetector/binary_video_classification.ipynb
@@ -110,10 +110,10 @@
     "    hooks=[\n",
     "        # dict(type='TextLoggerHook'),\n",
     "        dict(type='TensorboardLoggerHook'),\n",
-    "        dict(type='WandbLoggerHook', init_kwargs=dict(project='Binary-squat', \n",
+    "        dict(type='WandbLoggerHook', init_kwargs=dict(project='binary-video-classification', \n",
     "                                                      config={**cfg})),\n",
     "])\n",
-    "cfg.work_dir = './work_dirs/tsm_8_binary_squat_20220607_1956'\n",
+    "cfg.work_dir = f'./work_dirs/tsm_8_binary_squat_{time.strftime(\"%Y%m%d-%H%M%S\")}'\n",
     "cfg.resume_from = osp.join(cfg.work_dir, 'latest.pth')\n",
     "\n",
     "# print(cfg.pretty_text)\n"
