Update RepCount annotation csv column 'class' to 'class_' Add RepcountVideoDataset to load binary classification frames

--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>class</th>\n",
+       "      <th>class_</th>\n",
        "      <th>split</th>\n",
        "      <th>name</th>\n",
        "      <th>vid</th>\n",
@@ -978,7 +978,7 @@
        "</div>"
       ],
       "text/plain": [
-       "              class split           name          vid  start    end  count  \\\n",
+       "             class_ split           name          vid  start    end  count  \\\n",
        "0             situp  test  train3344.mp4          NaN    NaN    NaN   14.0   \n",
        "1           push_up  test    stu8_42.mp4  BVuI-syjR6A    0.0   15.0    6.0   \n",
        "2           pull_up  test    stu2_39.mp4  BU-X16wG-Jo  138.0  156.0    6.0   \n",
@@ -1007,7 +1007,7 @@
        "[115 rows x 8 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,9 +1021,9 @@
     "# drop types battle_rope, others, pommelhorse\n",
     "to_drop = all_df[all_df['type'].isin(['battle_rope', 'others', 'pommelhorse'])].index\n",
     "all_df.drop(to_drop, inplace=True)\n",
-    "all_df.rename(columns={'type': 'class', 'st': 'start', 'et': 'end'}, inplace=True)\n",
+    "all_df.rename(columns={'type': 'class_', 'st': 'start', 'et': 'end'}, inplace=True)\n",
     "# reorder columns\n",
-    "keep_cols = ['class', 'split', 'name', 'vid', 'start', 'end', 'count', 'reps']\n",
+    "keep_cols = ['class_', 'split', 'name', 'vid', 'start', 'end', 'count', 'reps']\n",
     "\n",
     "all_df = all_df[keep_cols]\n",
     "\n",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
