🌟Clean project structure🌟

--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RepCount dataset processing\n",
+    "\n",
+    "This notebook cleans the dataset and creates a new csv file with name `all_data.csv`.\n",
+    "\n",
+    "Advice: Don't trust the originial annotations.\n",
+    "\n",
+    "Errors:\n",
+    "1. Video missing frames. (One video in bench_pressing)\n",
+    "2. Annotation of repetition is incorrect. (Many rows in bench_pressing)\n",
+    "3. Column `type` has typos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -8,9 +24,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "from IPython.display import display\n",
     "from pathlib import Path\n",
     "\n",
     "base = '../datasets/RepCount/'"
