--- a/notebooks/countix_data_process.ipynb
+++ b/notebooks/countix_data_process.ipynb
@@ -998,6 +998,8 @@
    "source": [
     "### Build file list\n",
     "\n",
+    "Use `scripts/build_label_list.py`\n",
+    "\n",
     "- rawframes\n",
     "  - train\n",
     "    - video_id\n",
