--- a/notebooks/image_classfication_baseline.ipynb
+++ b/notebooks/image_classfication_baseline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Action recognition by image classification\n",
+    "\n",
+    "Get a understanding of the how well image based action recognition performs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
