--- a/notebooks/similarity_image.ipynb
+++ b/notebooks/similarity_image.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "# Compare similaries between images\n",
     "\n",
-    "Given an image and optionally class label, we want to find if the state of action is start or end or middle.\n",
+    "Needs modification. Don't run this notebook.\n",
     "\n",
-    "It is a regression problem. Or classification problem.\n",
-    "Let's define the correct prediction of start and end as 0 and 1.\n",
+    "Given an image and optionally class label, we want to find if the state of action is start or end or middle.\n",
     "\n",
     "Using CNN features."
    ]
@@ -30,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.common import *\n",
+    "from WorkoutDetector.utils.common import *\n",
     "plt.rcParams['figure.dpi'] = 300\n",
     "plt.rcParams['figure.figsize'] = (5, 3)"
    ]
